# phonebook

./: .gitignore  CMakeLists.txt
include/: main.h
include/contact/: contact.h
include/screen/: screen.h
include/util/: utils.h
src/: contact.c  main.c  screen.c
src/util/: utils.c
test/: contact_test.c
